Fix issue with the results icon getting clipped at the top

--- a/tbx/static_src/sass/components/_featured-case-study.scss
+++ b/tbx/static_src/sass/components/_featured-case-study.scss
@@ -151,6 +151,7 @@
             position: absolute;
             top: -5px;
             z-index: ($gradient-z-index + 1);
+            overflow: visible;
         }
 
         @include high-contrast-light-mode() {
